--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             background-color: var(--secondary-color);
         }
         .hero {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(241, 236, 236, 0.1)), url('/static/images/containerphoto.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(241, 236, 236, 0.1)), url('https://i.ibb.co/S3ZNnkB/fondo.png');
             background-size: 100%;
             background-repeat: no-repeat;
             background-position: center top;
